# HalideIR

./: CMakeLists.txt
cmake/template/: Config.cmake.in
